nav redesign: fix background panel colors

--- a/client/sites-dashboard-v2/style.scss
+++ b/client/sites-dashboard-v2/style.scss
@@ -1,6 +1,9 @@
 @import "@wordpress/base-styles/breakpoints";
 @import "@wordpress/base-styles/mixins";
 
+:root {
+	--color-light-backdrop: var(--studio-white);
+}
 .main.a4a-layout.sites-dashboard {
 	padding-block-start: 0;
 
