--- a/client/sites-dashboard-v2/dotcom-style.scss
+++ b/client/sites-dashboard-v2/dotcom-style.scss
@@ -14,7 +14,7 @@
 	.a4a-layout__top-wrapper {
 		border-block-end: 0;
 
-		@media (min-width: $break-medium) {
+		@include break-medium {
 			border-block-end: 1px solid var(--studio-gray-0);
 			margin-bottom: 24px;
 		}
@@ -27,10 +27,8 @@
 
 // Styles for actions (search, filters).
 .dataviews-filters__view-actions {
-	align-items: center;
-
 	.components-search-control {
-		@media (min-width: $break-large) {
+		@include break-large {
 			min-width: 390px;
 		}
 	}
@@ -63,6 +61,14 @@
 // Styles collapsed site list.
 .wpcom-site {
 	.sites-dashboard.preview-hidden {
+		.dataviews-filters__view-actions {
+			// Sort action icon
+			> .components-button:has(.preview-hidden) {
+				// Since we changed the original height of the search input, we need to adjust the position of this icon.
+				margin-top: 5px;
+			}
+		}
+
 		.sites-site-thumbnail {
 			display: flex;
 		}
