--- a/client/layout/style.scss
+++ b/client/layout/style.scss
@@ -143,8 +143,9 @@ body.command-palette-modal-open {
 // Add extra bottom padding for smaller screens to prevent
 // floating inline help from overlapping content.
 .layout__primary .main {
+	// The height is set to 100% in /sites page so we want to ensure that padding doesn't take us over 100% total height.
+	box-sizing: border-box;
 	padding-bottom: 88px;
-
 	@include breakpoint-deprecated( ">1400px" ) {
 		padding-bottom: 0;
 	}
