--- a/client/sites-dashboard-v2/site-preview-pane/style.scss
+++ b/client/sites-dashboard-v2/site-preview-pane/style.scss
@@ -1,3 +1,7 @@
 .item-preview__content {
-	padding: 32px;
+	padding: 0 32px;
+	> div {
+		// Apply padding-top to the content so that the padding is scrolled together
+		padding: 32px 0;
+	}
 }
