Hosting and Monitoring tabs without overflow and max-height

--- a/client/sites-dashboard-v2/site-preview-pane/style.scss
+++ b/client/sites-dashboard-v2/site-preview-pane/style.scss
@@ -1,3 +1,10 @@
 .item-preview__content {
 	padding: 32px;
+
+	.hosting-overview,
+	.site-monitoring-overview {
+		overflow-y: unset;
+		max-height: none;
+	}
 }
+
