Make sure the proper css rules have precedence

--- a/client/hosting-overview/components/style.scss
+++ b/client/hosting-overview/components/style.scss
@@ -261,7 +261,7 @@ a.hosting-overview__link-button {
 	}
 }
 
-.hosting-overview__domains-table {
+.domains-table.hosting-overview__domains-table {
 	font-family: "SF Pro Text", $sans;
 	padding: 0;
 
