fix overflow and padding styles for global sidebar sidebar section

--- a/client/my-sites/sidebar/style.scss
+++ b/client/my-sites/sidebar/style.scss
@@ -376,6 +376,7 @@ $font-size: rem(14px);
 
 	.global-sidebar .sidebar {
 		background-color: var(--color-sidebar-background);
+		padding-bottom: 0;
 
 		.sidebar__menu-link {
 			line-height: 15px;
