--- a/client/sites-dashboard-v2/style.scss
+++ b/client/sites-dashboard-v2/style.scss
@@ -4,6 +4,11 @@
 :root {
 	--color-light-backdrop: var(--studio-white);
 }
+.is-section-sites-dashboard {
+	.layout__secondary {
+		transition: all 0.2s ease-in-out;
+	}
+}
 .main.a4a-layout.sites-dashboard {
 	padding-block-start: 0;
 
