--- a/client/layout/global-sidebar/style.scss
+++ b/client/layout/global-sidebar/style.scss
@@ -412,6 +412,7 @@ $brand-text: "SF Pro Text", $sans;
 		.sidebar__header,
 		.sidebar__footer {
 			flex-direction: column;
+			align-items: flex-start;
 
 			.sidebar__footer-profile {
 				padding: 0;
@@ -431,7 +432,9 @@ $brand-text: "SF Pro Text", $sans;
 				margin: 0;
 			}
 			.sidebar__menu-link-text {
-				display: none;
+				transition: all 0.1s ease-in-out;
+				transition-delay: 0.2s;
+				opacity: 0;
 			}
 			.sidebar__menu-icon {
 				margin-left: 4px;
