--- a/client/layout/global-sidebar/style.scss
+++ b/client/layout/global-sidebar/style.scss
@@ -78,7 +78,6 @@ $brand-text: "SF Pro Text", $sans;
 		span.dotcom,
 		button.sidebar__item-search,
 		a.sidebar__item-notifications {
-			transition: all 0.3s ease-in-out;
 			display: flex;
 			width: 28px;
 			height: 28px;
@@ -412,7 +411,6 @@ $brand-text: "SF Pro Text", $sans;
 		.sidebar__header,
 		.sidebar__footer {
 			flex-direction: column;
-			align-items: flex-start;
 
 			.sidebar__footer-profile {
 				padding: 0;
@@ -432,9 +430,7 @@ $brand-text: "SF Pro Text", $sans;
 				margin: 0;
 			}
 			.sidebar__menu-link-text {
-				transition: all 0.1s ease-in-out;
-				transition-delay: 0.2s;
-				opacity: 0;
+				display: none;
 			}
 			.sidebar__menu-icon {
 				margin-left: 4px;
