Nav Redesign: Fix for dataviews scrolling container (#89980)
---------

Co-authored-by: Eru Penkman <roo2@protonmail.com>

--- a/client/sites-dashboard-v2/dotcom-style.scss
+++ b/client/sites-dashboard-v2/dotcom-style.scss
@@ -26,6 +26,11 @@
 
 	.dataviews-filters__view-actions {
 		border-bottom: 0;
+		align-items: center;
+	}
+
+	.a4a-layout__header {
+		flex-wrap: nowrap;
 	}
 }
 
@@ -33,7 +38,7 @@
 .dataviews-filters__view-actions {
 	.components-search-control {
 		@include break-large {
-			min-width: 390px;
+			min-width: 337px;
 		}
 	}
 
@@ -242,4 +247,9 @@
 			}
 		}
 	}
+}
+
+.wpcom-site div.is-group-sites-dashboard:not(.has-no-masterbar) .main.a4a-layout.sites-dashboard .dataviews-view-table-wrapper {
+	// With masterbar
+	max-height: calc(100vh - 347px); /* 347px is the size of all the height above and below the dataviews-view-table-wrapper */
 }
