--- a/client/a8c-for-agencies/components/items-dashboard/items-dataviews/style.scss
+++ b/client/a8c-for-agencies/components/items-dashboard/items-dataviews/style.scss
@@ -18,7 +18,8 @@
 	margin-bottom: 1rem;
 	padding: 12px 16px 12px 16px;
 	position: fixed;
-	width: calc(100% - 64px);
+	box-sizing: border-box;
+	width: 100%;
 
 	.components-input-control__backdrop {
 		border-color: var(--Gray-Gray-5, #dcdcde);
@@ -28,8 +29,12 @@
 		padding: 0 5px;
 	}
 
-	@include breakpoint-deprecated( ">660px" ) {
-		width: calc(100% - ( var(--sidebar-width-max) + 48px));
+	@media only screen and ( min-width: 600px ) {
+		width: calc(100% - 48px);
+	}
+
+	@media only screen and ( min-width: 782px ) {
+		width: calc(100% - ( var(--sidebar-width-max) + 16px));
 	}
 
 	@include breakpoint-deprecated( ">1400px" ) {
