Implement WPCOM hpsting header section

--- a/client/a8c-for-agencies/sections/marketplace/wpcom-overview/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/wpcom-overview/style.scss
@@ -1,7 +1,7 @@
 @import "@wordpress/base-styles/breakpoints";
 @import "@wordpress/base-styles/mixins";
 
-.pressable-overview .a4a-layout__body-wrapper {
+.wpcom-overview .a4a-layout__body-wrapper {
 	display: flex;
 	flex-direction: column;
 	gap: 64px;
