--- a/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-card/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-card/style.scss
@@ -1,13 +1,20 @@
 
 .hosting-card {
-	padding: 1.5rem;
 	border: 1px solid var(--color-neutral-10);
 	border-radius: 4px;
 	user-select: none;
+}
+
+.hosting-card__section {
+	padding: 24px;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
 	gap: 24px;
+
+	&:last-child {
+		border-block-start: 1px solid var(--color-neutral-5);
+	}
 }
 
 .hosting-card__price-value {
@@ -47,4 +54,12 @@
 	svg {
 		margin-inline-start: 6px;
 	}
+}
+
+ul.hosting-card__features {
+	display: flex;
+	flex-direction: column;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
 }
