--- a/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-card/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-card/style.scss
@@ -12,7 +12,7 @@
 	align-items: flex-start;
 	gap: 24px;
 
-	&:last-child {
+	&:last-child:not(:first-child) {
 		border-block-start: 1px solid var(--color-neutral-5);
 	}
 }
