Update Hosting card design.

--- a/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-card/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-card/style.scss
@@ -3,6 +3,10 @@
 	border: 1px solid var(--color-neutral-10);
 	border-radius: 4px;
 	user-select: none;
+
+	.button {
+		width: 100%;
+	}
 }
 
 .hosting-card__section {
@@ -30,9 +34,10 @@
 }
 
 .hosting-card__description {
-	font-size: 0.875rem;
-	line-height: 1.1;
+	font-size: 1rem;
+	line-height: 1.3;
 	font-weight: 400;
+	min-height: 44px;
 	margin: 0;
 }
 
