Add WooCommerce logo.

--- a/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-card/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-card/style.scss
@@ -7,6 +7,14 @@
 	.button {
 		width: 100%;
 	}
+
+	.woo-logo {
+		margin: 0;
+
+		path {
+			fill: var(--color-woocommerce);
+		}
+	}
 }
 
 .hosting-card__section {
