Handle errors through context

--- a/client/blocks/plugins-scheduled-updates-multisite/styles.scss
+++ b/client/blocks/plugins-scheduled-updates-multisite/styles.scss
@@ -6,6 +6,15 @@
 		margin-bottom: 1rem;
 	}
 
+	.components-notice {
+		margin-bottom: 1.25rem;
+		margin-top: 1.25rem;
+
+		ul {
+			margin-top: 1.25rem;
+		}
+	}
+
 	.schedule-form {
 		margin-bottom: 1.25rem;
 
