adjust finish screen ui

--- a/client/a8c-for-agencies/sections/signup/primary/agency-signup-finish/style.scss
+++ b/client/a8c-for-agencies/sections/signup/primary/agency-signup-finish/style.scss
@@ -7,7 +7,22 @@
 }
 
 .agency-signup-finish__text {
-	font-size: 3rem;
+	font-size: 2rem;
 	margin-block-end: 1rem;
+	text-align: center;
 	color: var(--color-neutral-10);
 }
+
+.agency-signup-finish__logo {
+	animation: pulse_opacity 1.5s ease-in-out infinite alternate;
+}
+
+@keyframes pulse_opacity {
+	0% {
+		opacity: 0.5;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
