--- a/client/a8c-for-agencies/sections/signup/primary/agency-signup-finish/style.scss
+++ b/client/a8c-for-agencies/sections/signup/primary/agency-signup-finish/style.scss
@@ -8,13 +8,13 @@
 
 .agency-signup-finish__text {
 	font-size: 2rem;
-	margin-block-end: 1rem;
 	text-align: center;
 	color: var(--color-neutral-10);
 }
 
 .agency-signup-finish__logo {
 	animation: pulse_opacity 1.5s ease-in-out infinite alternate;
+	margin-block-end: 48px;
 }
 
 @keyframes pulse_opacity {
