--- a/client/layout/global-sidebar/style.scss
+++ b/client/layout/global-sidebar/style.scss
@@ -429,6 +429,12 @@ $brand-text: "SF Pro Text", $sans;
 				width: 24px;
 				margin-left: 6px;
 			}
+			.rtl & {
+				span.dotcom {
+					background-position: right;
+					margin-right: 6px;
+				}
+			}
 		}
 
 		.sidebar__body {
