--- a/client/layout/global-sidebar/style.scss
+++ b/client/layout/global-sidebar/style.scss
@@ -428,6 +428,11 @@ $brand-text: "SF Pro Text", $sans;
 				background-position: left;
 				width: 24px;
 				margin-left: 6px;
+
+				.rtl & {
+					background-position: right;
+					margin-right: 6px;
+				}
 			}
 		}
 
