--- a/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-card/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-card/style.scss
@@ -30,23 +30,27 @@
 }
 
 .hosting-card__price-value {
-	font-size: 1rem;
+	display: block;
+	font-size: 1.5rem;
 	font-weight: 600;
-	line-height: 1.1;
+	line-height: 1;
+	margin-bottom: 6px;
 }
 
 .hosting-card__price-interval {
-	font-size: 0.75rem;
+	font-size: 0.875rem;
 	line-height: 1.1;
 	font-weight: 400;
+	color: var(--studio-gray-60, #50575e);
 }
 
 .hosting-card__description {
 	font-size: 1rem;
 	line-height: 1.3;
 	font-weight: 400;
-	min-height: 44px;
+	min-height: 62px;
 	margin: 0;
+	color: var(--studio-gray-80, #2c3338);
 }
 
 .hosting-card__header {
@@ -54,12 +58,29 @@
 	justify-content: space-between;
 	align-items: center;
 	width: 100%;
+	font-size: 1.5rem;
+	font-weight: 600;
+	line-height: 28px;
 
 	.badge {
 		display: flex;
 		background-color: #b8e6bf;
 		color: #00450c;
 
+	}
+}
+
+.button .hosting-card__explore-button-content {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 4px;
+
+	.gridicon {
+		width: 16px;
+		height: 16px;
+		top: 0;
+		margin-top: 0;
 	}
 }
 
@@ -75,4 +96,18 @@ ul.hosting-card__features {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
+}
+
+.hosting-card__logos {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 16px;
+	max-width: 300px;
+	margin: 0 auto;
+
+	svg {
+		flex-basis: 88px;
+		height: 48px;
+	}
 }
