--- a/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-list/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-list/style.scss
@@ -1,3 +1,10 @@
+@import "@wordpress/base-styles/breakpoints";
+@import "@wordpress/base-styles/mixins";
+
+.hosting-list {
+	justify-content: flex-start;
+}
+
 .hosting-list__placeholder {
 	@include placeholder( --color-neutral-10 );
 	height: 43px;
@@ -15,6 +22,11 @@
 	border: 1px solid var(--color-neutral-10);
 	box-shadow: none;
 	border-radius: 4px;
+	margin: 0;
+
+	@include break-wide {
+		width: calc(66.666% - 6px);
+	}
 }
 
 .hosting-list__features-heading {
@@ -24,4 +36,14 @@
 .hosting-list__features-list {
 	display: block;
 	column-count: 2;
+}
+
+.hosting-list__vip-card {
+	background-color: var(--color-neutral-0, #f6f7f7);
+}
+
+.wordpress-vip-logo {
+	display: flex;
+	align-items: flex-start;
+	gap: 8px;
 }
