--- a/client/a8c-for-agencies/components/items-dashboard/items-dataviews/style.scss
+++ b/client/a8c-for-agencies/components/items-dashboard/items-dataviews/style.scss
@@ -18,8 +18,7 @@
 	margin-bottom: 1rem;
 	padding: 12px 16px 12px 16px;
 	position: fixed;
-	box-sizing: border-box;
-	width: 100%;
+	width: calc(100% - 64px);
 
 	.components-input-control__backdrop {
 		border-color: var(--Gray-Gray-5, #dcdcde);
@@ -29,12 +28,8 @@
 		padding: 0 5px;
 	}
 
-	@media only screen and ( min-width: 600px ) {
-		width: calc(100% - 48px);
-	}
-
-	@media only screen and ( min-width: 782px ) {
-		width: calc(100% - ( var(--sidebar-width-max) + 16px));
+	@include breakpoint-deprecated( ">660px" ) {
+		width: calc(100% - ( var(--sidebar-width-max) + 48px));
 	}
 
 	@include breakpoint-deprecated( ">1400px" ) {
