--- a/packages/domains-table/src/domains-table-header/style.scss
+++ b/packages/domains-table/src/domains-table-header/style.scss
@@ -8,7 +8,7 @@
 	font-size: $font-body-small;
 	font-weight: 500;
 	color: var(--color-neutral-60);
-	border-bottom: 1px solid #f0f0f0;
+	border-bottom: 1px solid var(--color-border-secondary);
 
 	position: sticky;
 	top: var(--masterbar-height);
