Trail Map: Provision for rendering grouped features in the Features Grid (#89650)
* Plans: Base/foundation for rendering grouped features

* cleanup

* cleanup

* categories optionalised

* cleanup

* renderCategorisedFeatures context prop

* commit msg like no other

* Include previous plan features in usePlanFeaturesForGridPlans based on prop

* Add storybook config for categorized features

* fix story mock

* minor fixes

---------

Co-authored-by: Aneesh Devasthale <aneesh.devasthale@automattic.com>

--- a/packages/plans-grid-next/src/style.scss
+++ b/packages/plans-grid-next/src/style.scss
@@ -351,6 +351,10 @@ $mobile-card-max-width: 440px;
 	}
 }
 
+.plans-grid-next-features-grid__feature-group-title {
+	font-weight: 600;
+}
+
 .plan-features-2023-grid__item-info {
 	display: flex;
 	flex-direction: column;
