Added padding to survey bottom

--- a/client/components/survey-container/components/style.scss
+++ b/client/components/survey-container/components/style.scss
@@ -48,6 +48,7 @@ $blueberry-focus-color: #abc0f5;
 		flex-direction: column;
 		align-items: start;
 		gap: 44px;
+		padding-bottom: 40px;
 	}
 
 	&__continue-button.components-button.is-primary {
