--- a/client/sites-dashboard-v2/style.scss
+++ b/client/sites-dashboard-v2/style.scss
@@ -141,6 +141,9 @@
 		.components-button.is-compact.has-icon:not(.has-text).dataviews-filters-button {
 			min-width: 40px;
 		}
+		.components-button.is-compact.is-tertiary:not(.dataviews-filters-button) {
+			display: none;
+		}
 
 		.components-button.is-compact.is-tertiary {
 			margin-right: 8px;
