--- a/client/sites-dashboard-v2/style.scss
+++ b/client/sites-dashboard-v2/style.scss
@@ -4,6 +4,7 @@
 :root {
 	--color-light-backdrop: var(--studio-white);
 }
+
 .main.a4a-layout.sites-dashboard {
 	padding-block-start: 0;
 
@@ -538,6 +539,9 @@
 			background: var(--color-light-backdrop);
 			max-height: calc(100vh - 32px);
 			border-radius: 8px; /* stylelint-disable-line scales/radii */
+			.preview-pane__navigation {
+				box-shadow: 0 0 0 1px var(--color-border-subtle), 0 1px 2px var(--color-border-subtle);
+			}
 		}
 
 		.site-preview__open {
@@ -1100,6 +1104,9 @@
 
 	@media only screen and ( min-width: 782px ) {
 		width: calc(100% - ( var(--sidebar-width-max) + 16px));
+	}
+	.components-input-control__container > div.components-input-control__backdrop {
+		border-color: var(--color-border-subtle);
 	}
 }
 
