Hide unsupported features via styles

--- a/packages/plans-grid-next/src/style.scss
+++ b/packages/plans-grid-next/src/style.scss
@@ -962,6 +962,13 @@ $mobile-card-max-width: 440px;
 			.plan-comparison-grid__plan-subtitle {
 				text-decoration: line-through;
 			}
+
+			&.hide-unsupported-feature {
+				.plan-comparison-grid__plan-title,
+				.plan-comparison-grid__plan-subtitle {
+					display: none;
+				}
+			}
 		}
 
 		@include plans-grid-medium-large {
