Fix input styling.

--- a/client/a8c-for-agencies/sections/marketplace/wpcom-overview/wpcom-slider/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/wpcom-overview/wpcom-slider/style.scss
@@ -116,6 +116,9 @@
 	width: 2rem;
 	align-self: center;
 	text-align: center;
+	border: 1px solid var(--color-neutral-5);
+	border-radius: 4px;
+	min-height: 36px;
 }
 
 .a4a-slider__number-input::-webkit-inner-spin-button,
