--- a/client/a8c-for-agencies/components/items-dashboard/item-preview-pane/item-preview-pane-header/style.scss
+++ b/client/a8c-for-agencies/components/items-dashboard/item-preview-pane/item-preview-pane-header/style.scss
@@ -7,7 +7,8 @@
 			word-wrap: anywhere;
 		}
 
-		.item-preview__close-preview {
+		.item-preview__close-preview,
+		.item-preview__admin-button {
 			align-self: flex-start;
 		}
 	}
