--- a/client/a8c-for-agencies/components/items-dashboard/item-preview-pane/item-preview-pane-header/style.scss
+++ b/client/a8c-for-agencies/components/items-dashboard/item-preview-pane/item-preview-pane-header/style.scss
@@ -11,6 +11,10 @@
 		.item-preview__admin-button {
 			align-self: flex-start;
 		}
+
+		.item-preview__admin-button {
+			margin-right: 20px;
+		}
 	}
 
 	@media ( min-width: $break-large ) {
