--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -40,6 +40,7 @@
 	@include breakpoint-deprecated( "<660px" ) {
 		background: none;
 		border-radius: 0;
+		box-shadow: none;
 	}
 
 	@include breakpoint-deprecated( ">660px" ) {
