update to not use extraProp and apply close as secondary button

--- a/client/a8c-for-agencies/components/items-dashboard/item-preview-pane/item-preview-pane-header/style.scss
+++ b/client/a8c-for-agencies/components/items-dashboard/item-preview-pane/item-preview-pane-header/style.scss
@@ -8,12 +8,13 @@
 		}
 
 		.item-preview__close-preview,
+		.item-preview__close-preview-button,
 		.item-preview__admin-button {
 			align-self: flex-start;
 		}
 
-		.item-preview__admin-button {
-			margin-right: 20px;
+		.item-preview__close-preview-button {
+			margin-right: 15px;
 		}
 	}
 
