Sites dashboard preview - adopt primary wp admin button. (#90166)
* add primary wp-admin button with optional extraProp

* add margin to right of new button

* update to not use extraProp and apply close as secondary button

* capitalize the label... lol

* remove unnecessary aria label

* move focus ref to the wp-admin button

--- a/client/a8c-for-agencies/components/items-dashboard/item-preview-pane/item-preview-pane-header/style.scss
+++ b/client/a8c-for-agencies/components/items-dashboard/item-preview-pane/item-preview-pane-header/style.scss
@@ -7,8 +7,14 @@
 			word-wrap: anywhere;
 		}
 
-		.item-preview__close-preview {
+		.item-preview__close-preview,
+		.item-preview__close-preview-button,
+		.item-preview__admin-button {
 			align-self: flex-start;
+		}
+
+		.item-preview__close-preview-button {
+			margin-right: 15px;
 		}
 	}
 
