--- a/client/blocks/reader-feed-header/style.scss
+++ b/client/blocks/reader-feed-header/style.scss
@@ -2,6 +2,10 @@
 	display: flex;
 	margin-bottom: 16px;
 	z-index: z-index(".reader-feed-header", ".reader-feed-header__site");
+
+	@include breakpoint-deprecated( "<660px" ) {
+		margin: 0 16px 16px;
+	}
 }
 
 .reader-feed-header.is-wide-display .reader-feed-header__site {
