--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -29,7 +29,7 @@
 }
 
 .reader-post-card.card {
-	border-bottom: 5px solid var(--color-neutral-0);
+	border-bottom: 5px solid var(--color-neutral-5);
 	border-radius: 0;
 	box-shadow: none;
 	margin: 0;
@@ -150,6 +150,10 @@
 		.reader-post-card__post {
 			display: inherit;
 			margin: 0;
+
+			@include breakpoint-deprecated( "<660px" ) {
+				margin: 0 16px;
+			}
 		}
 
 		.reader-post-card__post-heading {
@@ -247,6 +251,10 @@
 			.comments__form {
 				margin-top: 0;
 			}
+
+			@include breakpoint-deprecated( "<660px" ) {
+				margin: 24px 16px 0 16px;
+			}
 		}
 	}
 
@@ -283,6 +291,11 @@
 		border-top: none;
 		margin: 20px 0 0 10px;
 		padding-top: 0;
+
+		@include breakpoint-deprecated( "<660px" ) {
+			margin: 20px 0 0 16px;
+			width: calc(100% - 32px);
+		}
 	}
 }
 
@@ -353,6 +366,10 @@
 .reader-post-card__byline {
 	display: flex;
 	font-size: $font-body-small;
+
+	@include breakpoint-deprecated( "<660px" ) {
+		margin: 0 16px;
+	}
 }
 
 .reader-post-card__author::after {
@@ -525,7 +542,7 @@
 
 @include breakpoint-deprecated( "<660px" ) {
 	.reader-post-card__post {
-		margin-left: 0;
+		margin: 0 16px;
 	}
 }
 
