--- a/client/reader/stream/style.scss
+++ b/client/reader/stream/style.scss
@@ -263,6 +263,10 @@
 		padding: 16px 0 32px;
 		border-bottom: 1px solid #e9e9ea;
 
+		@include breakpoint-deprecated( "<660px" ) {
+			padding: 16px 16px 32px;
+		}
+
 		+ .reader-post-card {
 			margin-top: 16px;
 		}
@@ -631,6 +635,10 @@
 				font-family: Recoleta, "Noto Serif", Georgia, "Times New Roman", Times, serif;
 			}
 
+			@include breakpoint-deprecated( "<660px" ) {
+				margin: 0 16px;
+			}
+
 			@include break-medium {
 				.app-promo__qr-code {
 					margin: -20px 0 0;
@@ -877,6 +885,11 @@
 	margin-bottom: 0;
 	margin-top: 60px;
 	padding-bottom: 0;
+
+	@include breakpoint-deprecated( "<660px" ) {
+		margin: 0 16px;
+		width: calc(100% - 32px);
+	}
 
 	@include breakpoint-deprecated( ">480px" ) {
 		height: 58px;
