add proper color

--- a/client/a8c-for-agencies/sections/marketplace/products-overview/product-listing/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/products-overview/product-listing/style.scss
@@ -33,7 +33,7 @@ p.product-listing__description {
 	padding-inline: 64px;
 	position: sticky;
 	top: 0;
-	background-color: #fff;
+	background-color: var(--color-surface);
 	padding-block-start: 16px;
 	align-items: center;
 	padding-block-end: 16px;
