make header take less space

--- a/client/a8c-for-agencies/sections/marketplace/products-overview/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/products-overview/style.scss
@@ -22,6 +22,12 @@
 	}
 }
 
+.products-overview {
+	.a4a-layout__top-wrapper {
+		padding-block-end: 0 !important;
+	}
+}
+
 .products-overview .assign-license-step-progress {
 	margin-block-start: 16px;
 	margin-block-end: 32px;
