--- a/client/reader/style.scss
+++ b/client/reader/style.scss
@@ -95,7 +95,6 @@
 .is-reader-page .is-site-stream .reader-feed-header.has-back-button .reader-feed-header__follow {
 
 	@include breakpoint-deprecated( "<660px" ) {
-		margin: 0 16px;
 		right: 0;
 	}
 
@@ -367,7 +366,7 @@
 
 .search-stream__single-column-results .reader-tag-sidebar-recommended-sites {
 	@include breakpoint-deprecated( "<660px" ) {
-		margin-top: 36px;
+		margin: 36px 16px 0;
 	}
 }
 
