--- a/client/blocks/reader-feed-header/style.scss
+++ b/client/blocks/reader-feed-header/style.scss
@@ -4,7 +4,7 @@
 	z-index: z-index(".reader-feed-header", ".reader-feed-header__site");
 
 	@include breakpoint-deprecated( "<660px" ) {
-		margin: 0 16px 16px;
+		margin-bottom: 16px;
 	}
 }
 
@@ -99,6 +99,10 @@
 		color: var(--color-text-subtle);
 		font-size: $font-body-small;
 		margin-bottom: 12px;
+	}
+
+	@include breakpoint-deprecated( "<660px" ) {
+		margin: 0 16px;
 	}
 }
 
