--- a/client/blocks/reader-post-actions/style.scss
+++ b/client/blocks/reader-post-actions/style.scss
@@ -10,7 +10,7 @@
 	margin: 10px 0 0;
 
 	@include breakpoint-deprecated( "<660px" ) {
-		justify-content: space-evenly;
+		justify-content: space-around;
 	}
 }
 
