Fixed back buttons

--- a/client/reader/tag-stream/style.scss
+++ b/client/reader/tag-stream/style.scss
@@ -97,7 +97,13 @@
 	}
 
 	@include breakpoint-deprecated( "<660px" ) {
-		margin: 16px;
+		margin: 32px 16px;
+	}
+}
+
+.is-reader-page .reader-feed-header.has-back-button .card.header-cake {
+	@include breakpoint-deprecated( "<660px" ) {
+		margin: 32px 0;
 	}
 }
 
