Fixed tag stream header lack of padding

--- a/client/reader/tag-stream/style.scss
+++ b/client/reader/tag-stream/style.scss
@@ -39,7 +39,7 @@
 }
 
 .reader__content .tag-stream__header {
-	margin-bottom: 0;
+	margin-bottom: 24px;
 }
 
 .reader__content .tag-stream__header.has-description {
