--- a/client/sites-dashboard-v2/dotcom-style.scss
+++ b/client/sites-dashboard-v2/dotcom-style.scss
@@ -364,6 +364,13 @@
 
 // Styles for site preview pane.
 .wpcom-site .a4a-layout.sites-dashboard .site-preview-pane {
+	.dev-tools-promo__icon {
+		display: inline-block;
+		height: 18px;
+		vertical-align: top;
+		margin-left: 4px;
+	}
+
 	.section-nav-tabs__list {
 		box-sizing: border-box;
 		overflow-x: auto;
