Move reader-specific styles there

--- a/client/reader/stream/style.scss
+++ b/client/reader/stream/style.scss
@@ -871,6 +871,15 @@
 			margin: 16px 0;
 		}
 	}
+
+	& .search-card.card {
+		max-width: 270px;
+		margin-left: 0;
+
+		@include breakpoint-deprecated( "<660px" ) {
+			max-width: unset;
+		}
+	}
 }
 
 // Posts and Sites tabbed headers
