A4A: Update header styles (#90435)
* A4A: Update header styles

* Adjust line-height to be unitless

--- a/client/a8c-for-agencies/components/items-dashboard/item-preview-pane/item-preview-pane-header/style.scss
+++ b/client/a8c-for-agencies/components/items-dashboard/item-preview-pane/item-preview-pane-header/style.scss
@@ -47,12 +47,19 @@
 
 					.item-preview__header-summary-link {
 						display: flex;
+						gap: 2px;
 						align-items: center;
-						font-size: rem(18px);
+						font-size: rem(16px);
 						font-weight: 400;
 						color: var(--color-accent-70);
-						line-height: 26px;
+						line-height: 1.5;
 						width: fit-content;
+						text-decoration: none;
+
+						&:hover {
+							color: var(--color-link-dark);
+							text-decoration: underline;
+						}
 
 						&:focus {
 							box-shadow: none;
