Mulstisite Scheduled Updates: Adapt global style layout (#90411)
* Create previewMode prop and move isMobile logic from the comp

* Update layout to match design

* Add Plugins menu item to the global sidebar

* Remove hardcoded height; there is prop for setting input size

* Extend schedule-list with compact param

* Load compact schedules list

* Extend selectors with plugins section

* Set schedules-list width

* Add column classes and apply padding for edit and create

* Add column classes and apply padding for list and list-compact

* Match card border color with Figma design

* Adjust compact mode search input style

* Adjust heading font-size for the create and edit forms

* Fix missing callback params for edit and create context

* Adjust style for the mobile view port

* Created selected class for the schedules list

* Highligh selected schedule in cards mode

* Adjust expand and menu cells styles

* Remove Plugins menu item from the global navigation

* Re-init edit form when the id is updated

* Set width for the expand column

* Fix mobile viewport regression

* Hide the 'New schedule' button in edit mode

* Switch breakpoint value from 480 to 660px

* Adjust empty state screen paddings

* Provide New schedule card for the schedule list in compact mode

* Update breakpoint from 600 to 660; fixing the calypso warning

* Update breakpoint from 600 to 660; fixing the calypso warning

* Remove duplicated rules

* Improve condition for applying proper global navigation styles

--- a/client/blocks/plugins-scheduled-updates-multisite/styles.scss
+++ b/client/blocks/plugins-scheduled-updates-multisite/styles.scss
@@ -4,8 +4,15 @@
 $brand-display: "SF Pro Display", sans-serif;
 
 .plugins-update-manager-multisite {
-	@media screen and (max-width: $break-small) {
+	@media screen and (max-width: 660px) {
 		margin: 1rem;
+	}
+
+	&.plugins-update-manager-multisite-edit,
+	&.plugins-update-manager-multisite-create {
+		h1 {
+			font-size: 2rem !important;
+		}
 	}
 
 	h1 {
@@ -54,6 +61,10 @@ $brand-display: "SF Pro Display", sans-serif;
 
 		th {
 			font-weight: 500;
+
+			&.expand {
+				width: 4rem;
+			}
 		}
 
 		td {
@@ -69,11 +80,16 @@ $brand-display: "SF Pro Display", sans-serif;
 			}
 
 			&.expand {
+				text-align: center;
 				line-height: 1;
 
 				button {
 					margin-top: rem(2px);
 				}
+			}
+
+			&.menu {
+				text-align: center;
 			}
 		}
 
@@ -97,11 +113,21 @@ $brand-display: "SF Pro Display", sans-serif;
 			flex: 1;
 
 			max-width: 30rem;
-			height: 3rem;
 			box-sizing: border-box;
 
 			border: 1px solid $studio-gray-10;
 			border-radius: 2px;
+
+			&.is-compact {
+				.plugins-update-manager-multisite-filter__search-icon {
+					width: 0.875rem;
+					margin: 0 0.5rem;
+				}
+
+				input {
+					font-size: 0.875rem;
+				}
+			}
 
 			.plugins-update-manager-multisite-filter__search-icon {
 				margin-left: 1rem;
@@ -148,6 +174,10 @@ $brand-display: "SF Pro Display", sans-serif;
 		text-align: left;
 		padding: 0;
 
+		@media screen and (max-width: $break-large) {
+			max-width: 100%;
+		}
+
 		p {
 			color: var(--studio-gray-100);
 			margin: 1.5rem auto;
@@ -159,7 +189,19 @@ $brand-display: "SF Pro Display", sans-serif;
 
 	.plugins-update-manager-multisite-card {
 		margin-bottom: 1rem;
-		border-bottom: solid 1px var(--studio-gray-5);
+		border-bottom: solid 1px var(--studio-gray-0);
+
+		&:first-child {
+			border-top: solid 1px var(--studio-gray-0);
+		}
+
+		&.is-selected {
+			background: #f7faff;
+		}
+
+		&__new {
+			line-height: 2;
+		}
 
 		&__label {
 			font-size: 0.875rem;
