Revert "Nav Redesign: Add frame around Reader pages like /sites (#90412)"
This reverts commit 121202fd06df88bf4ee0885229d32e4e0d47f6ef.

--- a/client/reader/tags/style.scss
+++ b/client/reader/tags/style.scss
@@ -1,6 +1,10 @@
 @import "@wordpress/base-styles/breakpoints";
 @import "@wordpress/base-styles/mixins";
 
+.is-section-reader {
+	background: var(--studio-white); // TODO: Remove after nav-redesign-v2 for reader is done.
+}
+
 .layout.has-header-section.is-section-reader .layout__header-section-content {
 	box-sizing: border-box;
 	max-width: 1140px;
