--- a/client/reader/components/reader-main/style.scss
+++ b/client/reader/components/reader-main/style.scss
@@ -1,3 +1,8 @@
+body.is-reader-page,
+.is-reader-page .layout {
+	background-color: var(--color-surface); // TODO: Remove after nav-redesign-v2 for reader is done.
+}
+
 .is-reader-page .list-end {
 	border-top: none;
 
