--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -8,6 +8,9 @@
 		margin: 0 auto;
 		padding: 16px 0 16px 0;
 	}
+	@include breakpoint-deprecated( "<660px" ) {
+		padding: 0 16px; // Intentionally padding, not margin
+	}
 }
 
 // .has-header-section only applies for logged out views
@@ -19,22 +22,9 @@
 	margin-bottom: 4px;
 }
 
-.layout.has-header-section.is-section-reader {
-
-	.layout__content {
-		background: var(--studio-white);
-	}
-	.main.search-stream {
-		padding-inline: 0;
-	}
-}
-
 
 .is-reader-page .main.search-stream {
 	max-width: 905px;
-	margin: 0 auto;
-	padding-inline: 24px;
-	padding-top: 0 !important;
 }
 
 .search-stream__intro {
@@ -71,13 +61,17 @@
 
 .is-reader-page .search-stream__fixed-area {
 	background: var(--studio-white);
-	position: sticky;
+	position: fixed;
 	top: 0;
+	margin-top: var(--masterbar-height);
 	z-index: 20;
 	-webkit-font-smoothing: subpixel-antialiased; // Fixes fixed elements text aliasing in Safari
 
-	@media only screen and (min-width: 601px) and (max-width: 660px) {
-		width: calc(100% - 96px);
+	@include breakpoint-deprecated( "<660px" ) {
+		width: calc(100% - 32px);
+	}
+	@include breakpoint-deprecated( ">660px" ) {
+		padding-top: 30px;
 	}
 }
 
